--- a/config/meta.yml
+++ b/config/meta.yml
@@ -1,4 +1,4 @@
-meta_product_name: "PPSPro"
-meta_title: "PPSPro"
+meta_product_name: "Obras"
+meta_title: "Obras"
 meta_description: "Réaliser votre PPSP en toute simplicité"
 meta_image: "logo-ppsp.png"
