--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
+    "react-waypoint": "^9.0.3",
     "react_ujs": "^2.6.1",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
