--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ before_install:
 addons:
   postgresql: '9.6'
 before_script:
-  - psql -c 'create database ppsp_project_test;' -U postgres
+  - psql -c 'create database ppsps_project_test;' -U postgres
 script:
   - bundle exec rake db:schema:load
   - bundle exec rake db:test:prepare
