--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,20 @@ addons:
   postgresql: '9.6'
 before_script:
   - psql -c 'create database ppsps_project_test;' -U postgres
+
+cache:
+  bundler: true
+  directories:
+    - node_modules
+  yarn: true
+
+install:
+  - bundle install
+  - nvm install node
+  - node -v
+  - npm i -g yarn
+  - yarn
+  
 script:
   - bundle exec rake db:schema:load
   - bundle exec rake db:test:prepare
