--- a/.travis.yml
+++ b/.travis.yml
@@ -33,3 +33,4 @@ script:
   - bundle exec rake spec:features
   - bundle exec rake spec:models
   - bundle exec rake spec:requests
+  - yarn run test
