--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ install:
 script:
   - bundle exec rake db:schema:load
   - bundle exec rake db:test:prepare
-  - SECRET_KEY_BASE=a RAILS_ENV=production bundle exec rake assets:precompile
+  - SECRET_KEY_BASE=a RAILS_ENV=production #bundle exec rake assets:precompile : To make js test work
   - bundle exec rake spec:features
   - bundle exec rake spec:models
   - bundle exec rake spec:requests
