--- a/.travis.yml
+++ b/.travis.yml
@@ -29,8 +29,8 @@ install:
 script:
   - bundle exec rake db:schema:load
   - bundle exec rake db:test:prepare
-  - SECRET_KEY_BASE=a RAILS_ENV=production #bundle exec rake assets:precompile : To make js test work
-  - bundle exec rake spec:features
-  - bundle exec rake spec:models
-  - bundle exec rake spec:requests
   - yarn run test
+  - SECRET_KEY_BASE=a RAILS_ENV=production bundle exec rake assets:precompile
+  - bundle exec rspec spec:features
+  - bundle exec rspec spec:models
+  - bundle exec rspec spec:requests
