--- a/.travis.yml
+++ b/.travis.yml
@@ -31,6 +31,6 @@ script:
   - bundle exec rake db:test:prepare
   - yarn run test
   - SECRET_KEY_BASE=a RAILS_ENV=production bundle exec rake assets:precompile
-  - bundle exec rspec spec:features
-  - bundle exec rspec spec:models
-  - bundle exec rspec spec:requests
+  - bundle exec rake spec:features
+  - bundle exec rake spec:models
+  - bundle exec rake spec:requests
