--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "redux-logger": "^3.0.6",
     "redux-promise": "^0.6.0",
     "select2": "^4.0.13",
-    "turbolinks": "^5.2.0",
-    "serialize-javascript": ">=3.1.0"
+    "serialize-javascript": ">=3.1.0",
+    "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
   "devDependencies": {
