Sweet Alert integration

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "redux-promise": "^0.6.0",
     "select2": "^4.0.13",
     "serialize-javascript": ">=3.1.0",
+    "sweetalert2": "^10.13.0",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
