--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,7 @@ script:
   - bundle exec rake db:schema:load
   - bundle exec rake db:test:prepare
   - yarn run test
+  - bundle exec rake assets:clean
   - SECRET_KEY_BASE=a RAILS_ENV=production bundle exec rake assets:precompile
   - bundle exec rake spec:features
   - bundle exec rake spec:models
