--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -31,7 +31,7 @@ Metrics/CyclomaticComplexity:
 Metrics/PerceivedComplexity:
   Enabled: false
 Metrics/MethodLength:
-  Enabled: false
+  Max: 20
 Style/MissingRespondToMissing:
   Enabled: false
 # Lint/MissingSuper:
