--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "@babel/preset-react": "^7.12.5",
     "@rails/actioncable": "^6.0.0",
+    "@rails/actiontext": "^6.0.3-4",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.3.0",
@@ -27,6 +28,7 @@
     "select2": "^4.0.13",
     "serialize-javascript": ">=3.1.0",
     "sweetalert2": "^10.13.0",
+    "trix": "^1.2.0",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
