--- a/config/tinymce.yml
+++ b/config/tinymce.yml
@@ -1,10 +1,6 @@
-default: &default
-  plugins:
-    - image
-    - link
-
-alternate:
-  <<: *default
-  toolbar: styleselect | bold italic | undo redo | table
-  plugins:
-    - table
+toolbar:
+  - styleselect | bold italic | undo redo
+  - image | link
+plugins:
+  - image
+  - link
