--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "enzyme-adapter-react-16": "^1.15.5",
     "flatpickr": "^4.6.6",
     "jquery": "^3.5.1",
+    "mapbox-gl": "^2.0.1",
     "popper.js": "^1.16.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
@@ -28,7 +29,8 @@
     "select2": "^4.0.13",
     "serialize-javascript": ">=3.1.0",
     "sweetalert2": "^10.13.0",
-    "turbolinks": "^5.2.0"
+    "turbolinks": "^5.2.0",
+    "worker-loader": "^3.0.7"
   },
   "version": "0.1.0",
   "devDependencies": {
