--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "popper.js": "^1.16.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-test-renderer": "^17.0.1",
