--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.3.0",
+    "@testing-library/dom": "^7.29.4",
+    "@testing-library/react": "^11.2.5",
+    "@testing-library/user-event": "^12.7.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "bootstrap": "^4.5.0",
     "enzyme": "^3.11.0",
