--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-promise": "^0.6.0",
+    "redux-thunk": "^2.3.0",
     "select2": "^4.0.13",
     "serialize-javascript": ">=3.1.0",
     "sweetalert2": "^10.13.0",
