--- a/config/webpacker.yml
+++ b/config/webpacker.yml
@@ -79,6 +79,7 @@ development:
 test:
   <<: *default
   compile: true
+  externals: ['axios']
 
   # Compile test packs to a separate directory
   public_output_path: packs-test
