--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,8 @@
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+# Ignore the config for cloudinary
+/config/cloudinary.yml
 
 /public/packs
 /public/packs-test
