--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.21.1",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "bootstrap": "^4.5.0",
+    "dropzone": "^5.8.1",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.5",
     "flatpickr": "^4.6.6",
@@ -34,6 +35,7 @@
     "redux-thunk": "^2.3.0",
     "select2": "^4.0.13",
     "serialize-javascript": ">=3.1.0",
+    "stimulus": "^2.0.0",
     "sweetalert2": "^10.13.0",
     "turbolinks": "^5.2.0",
     "worker-loader": "^3.0.7"
