--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,14 +6,15 @@
     "lib": ["es6", "dom"],
     "module": "es6",
     "moduleResolution": "node",
-    "baseUrl": ".",
-    "paths": {
-      "*": ["node_modules/*", "app/packs/*"]
-    },
     "sourceMap": true,
     "target": "es5",
-    "noEmit": true
+    "jsx": "react"
   },
-  "exclude": ["**/*.spec.ts", "node_modules", "vendor", "public"],
+  "exclude": [
+    "**/*.spec.ts",
+    "node_modules",
+    "vendor",
+    "public"
+  ],
   "compileOnSave": false
 }
