--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,14 +3,14 @@ version: '2.4'
 services:
   app: &app
     build:
-      context: .dockerdev
+      context: .
       dockerfile: Dockerfile
       args:
         RUBY_VERSION: '2.6.6'
         PG_MAJOR: '12.6'
-        NODE_MAJOR: '14.16.0'
+        NODE_MAJOR: '14'
         YARN_VERSION: '1.22.5'
-        BUNDLER_VERSION: '2.1.4'
+        BUNDLER_VERSION: '2.2.14'
     image: ppsps-project:1.0.0
     tmpfs:
       - /tmp
@@ -25,7 +25,7 @@ services:
       - bundle:/usr/local/bundle
       - node_modules:/app/node_modules
       - packs:/app/public/packs
-      - .dockerdev/.psqlrc:/root/.psqlrc:ro
+      - ./.psqlrc:/root/.psqlrc:ro
     environment:
       - NODE_ENV=development
       - RAILS_ENV=${RAILS_ENV:-development}
@@ -43,18 +43,18 @@ services:
       redis:
         condition: service_healthy
 
-  runner:
-    <<: *backend
-    command: /bin/zsh
-    ports:
-      - '3000:3000'
-      - '3002:3002'
+  # runner:
+  #   <<: *backend
+  #   command: /bin/zsh
+  #   ports:
+  #     - '3000:3000'
+  #     - '3002:3002'
 
   rails:
     <<: *backend
     command: bundle exec rails server -b 0.0.0.0
     ports:
-      - '3000:3000'
+      - '3001:3001'
 
   sidekiq:
     <<: *backend
