--- a/config/database.yml
+++ b/config/database.yml
@@ -28,6 +28,7 @@ default: &default
 development:
   <<: *default
   database: <%= Rails.application.credentials.database[:database_name_development] %>
+  host: localhost
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -62,6 +63,7 @@ development:
 test:
   <<: *default
   database: <%= Rails.application.credentials.database[:database_name_test] %>
+  host: localhost
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -87,3 +89,5 @@ production:
   database: <%= Rails.application.credentials.database[:database_production] %>
   username: ppsps_project
   password: <%= ENV['PPSPS_PROJECT_DATABASE_PASSWORD'] %>
+  host: <%= Rails.application.credentials.database[:database_host] %>
+
