--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -52,6 +52,10 @@ jobs:
     - name: Build App
       env:
         RAILS_MASTER_KEY: ${{ secrets.RAILS_MASTER_KEY }} 
+        PGHOST: localhost
+        PGUSER: ${{ secrets.DB_USER }} 
+        PGPASSWORD: ${{ secrets.DB_PASSWORD }} 
+        RAILS_ENV: test
       run: |
         bin/rails db:setup
 
