--- a/config/database.yml
+++ b/config/database.yml
@@ -16,7 +16,9 @@
 #
 default: &default
   adapter: postgresql
-  encoding: unicode
+  encoding: unicode  
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
 
@@ -62,7 +64,7 @@ development:
 test:
   <<: *default
   database: <%= Rails.application.credentials.database[:database_name_test] %>
-  host: localhost
+  # host: localhost
 
 
 # As with config/credentials.yml, you never want to store sensitive information,
