--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mapbox-gl": "^2.0.1",
     "popper.js": "^1.16.1",
     "prop-types": "^15.7.2",
+    "puppeteer": "^10.0.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
